syntax = "proto3";

package cosmos.v1alpha1;
option go_package = "github.com/bbengfort/cosmos/pkg/pb/v1alpha;pb";

import "google/protobuf/timestamp.proto";


service Cosmos {
    rpc Login(Auth) returns (AuthToken) {}
    rpc Status(HealthCheck) returns (SystemStatus) {}
}


message Auth {
    string username = 1;
    string password = 2;
}

message AuthToken {
    string access_token = 1;
    string refresh_token = 2;
}

message HealthCheck {
    uint32 attempts = 1;
    google.protobuf.Timestamp last_checked_at = 2;
}

message SystemStatus {
    string status = 1;
    string version = 2;
    string uptime = 3;
}